Solucionando errores Maintainability