@@ -9,7 +9,7 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+
 
 import static com.example.apirecetas.contants.Constants.SUPER_SECRET_KEY;
 import static com.example.apirecetas.contants.Constants.getSigningKey;
@@ -25,13 +25,13 @@ public class JWTAuthtenticationConfig {
         Map<String, Object> claims = new HashMap<>();
         claims.put("authorities", grantedAuthorities.stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList()));
+                .toList());
 
         String token = Jwts.builder()
-                .setClaims(claims) // Usar setClaims en lugar de claims() y add()
-                .setSubject(username)
-                .setIssuedAt(new Date(System.currentTimeMillis()))
-                .setExpiration(new Date(System.currentTimeMillis() + 1000 * 60 * 1440))
+                .claims(claims) // Usar setClaims en lugar de claims() y add()
+                .subject(username)
+                .issuedAt(new Date(System.currentTimeMillis()))
+                .expiration(new Date(System.currentTimeMillis() + 1000 * 60 * 1440))
                 .signWith(getSigningKey(SUPER_SECRET_KEY))
                 .compact();
 
